...
        android:id="@+id/fragment_record"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btnRecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/expanded_vertical_margin"
            android:enabled="@{viewModel.serviceConnected ? true : false}"
            android:src="@{viewModel.serviceConnected &amp;&amp; viewModel.serviceRecording ? @drawable/ic_media_stop : @drawable/ic_mic_white_36dp}"
            app:backgroundTint="@color/primary"
...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:src="@drawable/ic_mic_white_36dp" />

        <TextView
            android:id="@+id/tvChronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_horizontal_margin"
            android:layout_marginTop="@dimen/expanded_vertical_margin"
            android:fontFamily="sans-serif-light"
            android:text="@{Utils.formatSecondsElapsedForChronometer(viewModel.secondsElapsed)}"
...
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/recording_status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/expanded_vertical_margin"
            android:fontFamily="sans-serif-condensed"
            android:text="@{viewModel.serviceConnected &amp;&amp; viewModel.serviceRecording ? @string/record_in_progress : @string/record_prompt}"
            android:textColor="@color/primary_text"
...
