...
        android:id="@+id/fragment_file_viewer"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:context="com.iclaude.scheduledrecorder.ui.fragments.fileviewer.FileViewerFragment">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/fileviewer_horizontal_margin"
            android:layout_marginEnd="@dimen/fileviewer_horizontal_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
...
            android:visibility="@{viewModel.dataLoading ? View.VISIBLE : View.GONE}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="32dp"
            android:visibility="@{!viewModel.dataLoading &amp;&amp; !viewModel.dataAvailable ? View.VISIBLE : View.GONE}"
            app:layout_constraintEnd_toEndOf="parent"
...
