...

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <android.support.design.widget.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:textColor="@color/white"
        app:tabSelectedTextColor="@color/white"
        style="@style/MyCustomTabLayout"
...
